# PDDL-Prover

./: .gitignore  README.md  pyproject.toml  tests.py
src/pddl_prover/: __init__.py  examples.py  logic.py
